<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_image"
        android:contentDescription="@string/background"/>

    <ImageView
        android:id="@+id/lightLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fulllogo_194"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dbTitleLogin"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.18"
        />

    <TextView
        android:id="@+id/dbTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/database_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/silahkanLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lightLogo" />

    <TextView
        android:id="@+id/silahkanLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_login"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@id/frameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dbTitleLogin" />

    <LinearLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/silahkanLogin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:background="@color/teal_700"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:shadowColor="@color/white"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>