<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.picking.pickingall.PickingModInValLPNActivity"
    android:background="@color/teal_1100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutPallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@id/submenu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp"
            android:layout_marginBottom="@dimen/_20ssp"
            android:text="@string/sub_menu_title"
            android:textColor="@color/teal_700"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/submenu_backicon"
            android:layout_width="@dimen/_60ssp"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/iconback" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/inputLayoutPallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        app:counterMaxLength="100"
        android:background="@color/white"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/layoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Scan Label Pack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/ed_scanPallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:maxLength="100" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@id/btn_scan_lpn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:background="@color/teal_700"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@id/btn_next"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/lanjut"
            android:textColor="@color/white"
            android:background="@color/teal_700"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>